Updated CustomUser model, profile UI, settings fixes, cleaned .gitignore

--- a/gprojectapp/templates/authentication/baseauth.html
+++ b/gprojectapp/templates/authentication/baseauth.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>{% block title %}Home - aambika{% endblock title %}</title>
+  <title>{% block title %}Home - Shrimati{% endblock title %}</title>
 
   <!-- Favicons -->
   <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
@@ -37,7 +37,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="/" class="logo d-flex align-items-center">
-        <h1 class="sitename">aambika</h1>
+        <h1 class="sitename">Shrimati</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
